[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvidplayer2"
dynamic = ["version"]
description = "Reliable, easy, and fast video playback in Python"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Anray Liu", email = "anrayliu@gmail.com"}
]
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python",
    "pygame-ce",
    "pysubs2",
    "PyAudio"
]
keywords = ["pygame", "video", "playback", "tkinter", "pyqt", "pyside", "pyglet"]
classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: Developers",
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Video :: Display",
  "Topic :: Software Development :: Libraries :: pygame",

"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.13",
"Programming Language :: Python :: 3.14"
]

[project.optional-dependencies]
all = [
        "numpy",
        "opencv-python",
        "pygame-ce",
        "PyAudio",
        "pysubs2",
        "yt-dlp",
        "decord",
        "imageio",
        "av",
        "pyglet",
        "PySide6",
        "PyQt6",
        "raylib"
    ]

[tool.setuptools.dynamic]
version = {attr = "pyvidplayer2._version.__version__"}

[project.urls]
Homepage = "https://github.com/anrayliu/pyvidplayer2"
Documentation = "https://github.com/anrayliu/pyvidplayer2/blob/main/documentation.md"
Repository = "https://github.com/anrayliu/pyvidplayer2.git"
Issues = "https://github.com/anrayliu/pyvidplayer2/issues"
