[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvidplayer2"
dynamic = ["version"]
description = "Reliable, easy, and fast video playback in Python with integrations for pygame, tkinter, pyglet, and more."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Anray Liu", email = "anrayliu@gmail.com"}
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python",
    "pygame-ce",
    "pysubs2",
    "sounddevice"
]
keywords = ["pygame", "video", "playback"]
maintainers = [
    { name = "Anray Liu", email = "anrayliu@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: Developers",
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Video :: Display",
  "Topic :: Software Development :: Libraries :: pygame",
  "Operating System :: OS Independent",
  "Typing :: Typed",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]

[project.optional-dependencies]
# only needed for running unit tests
# regular users should not install all of these, as it'll add a lot of bloat
all = [
        "yt-dlp[default]",
        "decord",
        "imageio",
        "av",
        "pyglet",
        "PySide6",
        "PyQt6",
        "raylib",
        "wxPython",
    ]

[tool.setuptools]
packages = ["pyvidplayer2"]

[tool.setuptools.package-data]
pyvidplayer2 = ["bin/ffmpeg", "bin/ffprobe"]

[tool.setuptools.dynamic]
version = {attr = "pyvidplayer2._version.__version__"}

[project.urls]
Homepage = "https://github.com/anrayliu/pyvidplayer2"
Documentation = "https://github.com/anrayliu/pyvidplayer2/blob/main/documentation.md"
Repository = "https://github.com/anrayliu/pyvidplayer2.git"
Issues = "https://github.com/anrayliu/pyvidplayer2/issues"
